[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/fonts/delfino.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/editor/window.gd" type="Script" id=2]
[ext_resource path="res://scenes/editor/sounds/hover.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/editor/assets/window.png" type="Texture" id=4]
[ext_resource path="res://scenes/editor/assets/window_close.png" type="Texture" id=5]
[ext_resource path="res://scenes/editor/assets/window_close_hover.png" type="Texture" id=6]
[ext_resource path="res://scenes/editor/sounds/click2.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/styles/ButtonStyleHover.tres" type="StyleBox" id=8]
[ext_resource path="res://assets/styles/ButtonStyleNormal.tres" type="StyleBox" id=9]

[sub_resource type="DynamicFont" id=1]
size = 56
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[node name="AreasWindow" type="NinePatchRect"]
margin_left = 165.0
margin_top = 130.0
margin_right = 1218.0
margin_bottom = 680.0
rect_scale = Vector2( 0.4, 0.4 )
mouse_filter = 0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 108, 290 )
patch_margin_left = 40
patch_margin_top = 110
patch_margin_right = 40
patch_margin_bottom = 40
script = ExtResource( 2 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 24.2632
margin_right = 456.0
margin_bottom = 102.263
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
bbcode_text = "Level Code"
text = "Level Code"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="."]
margin_left = 888.65
margin_top = 12.953
margin_right = 1043.65
margin_bottom = 93.953
rect_scale = Vector2( 0.95, 0.95 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="HoverSound" type="AudioStreamPlayer" parent="CloseButton"]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="CloseButton"]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="Contents" type="Control" parent="."]
anchor_bottom = 0.06
margin_left = 17.4044
margin_top = 104.0
margin_right = 1036.4
margin_bottom = 498.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddButton" type="Button" parent="Contents"]
margin_left = 20.0
margin_top = 320.0
margin_right = 420.0
margin_bottom = 410.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
shortcut_in_tooltip = false
action_mode = 0
text = "Add Area"

[node name="HoverSound" type="AudioStreamPlayer" parent="Contents/AddButton"]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="Contents/AddButton"]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="ScrollContainer" type="ScrollContainer" parent="Contents"]
margin_left = 20.0
margin_top = 6.0
margin_right = 1000.0
margin_bottom = 316.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
